--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "react": "^16.12.0 || ^17.0.0",
     "styled-components": "^5.3.5"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fy996icu/note.git",
+    "branch": "main",
+    "platform": "github"
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
